[package]
name = "websitul"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
bson = { version = "2.14.0", features = ["chrono-0_4"] }
mongodb = "3.2.3"
tokio = { version = "1.44.2", features = ["full", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
futures-util = "0.3.31"
rand = "0.9.1"
